@@ -51,7 +51,7 @@ public class InfoModel extends Observable implements Observer {
 	@Override
 	public void update(Observable observable, Object arg) {
 		if (observable.equals(ChalmeRisk.turnModel)) {
-			if(arg.equals(new Integer(0))){
+			if(arg.equals(Integer.valueOf(0))){
 				if (ChalmeRisk.turnModel.getCurrentStateIndex() == 0){
 					setInfoText("You are now in the reinforcement state, place your reinforcements.");
 				}
